--- a/day1/Tensors.ipynb
+++ b/day1/Tensors.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Tensors.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPFbhInGWkyMast0F8hMlGn",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ankushKun/learning-ML/blob/master/day1/Tensors.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -32,7 +44,7 @@
       "source": [
         "import torch # Importing pytorch"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -59,7 +71,7 @@
         "print(t1)\n",
         "print(t1.dtype)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +98,7 @@
         "print(t2) # everythons gets converted to the same datatype\n",
         "print(t2.dtype)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +125,7 @@
         "print(t3)\n",
         "print(t3.dtype)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +153,7 @@
         "t4 = torch.tensor([[[1,2,3],[4,5,6]],[[9,6,3],[1,6,4]]])\n",
         "t4"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -187,7 +199,7 @@
         "print(t3,t3.shape)\n",
         "print(t4,t4.shape)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -206,17 +218,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9hp5KYrS1Tq6"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
